@@ -65,12 +65,12 @@ Cookie handling is done through methods:
     'test=value; Path=/;'
     >>> res.set_cookie('test2', 'value2', max_age=10000)
     >>> res.headers['set-cookie'] # We only see the last header
-    'test2=value2; Max-Age=10000; Path=/;'
+    'test2=value2; expires="... GMT"; Max-Age=10000; Path=/;'
     >>> res.headers.getall('set-cookie')
-    ['test=value; Path=/;', 'test2=value2; Max-Age=10000; Path=/;']
+    ['test=value; Path=/;', 'test2=value2; expires="... GMT"; Max-Age=10000; Path=/;']
     >>> res.unset_cookie('test')
     >>> res.headers.getall('set-cookie')
-    ['test2=value2; Max-Age=10000; Path=/;']
+    ['test2=value2; expires="... GMT"; Max-Age=10000; Path=/;']
 
 Most headers are available in a parsed getter/setter form through
 properties:
